--- a/_posts/2023-09-24-Meowdy.md
+++ b/_posts/2023-09-24-Meowdy.md
@@ -6,10 +6,27 @@ tags:
   - game-dev
   - game-jam
   - small-teams
+  - godot
+  - c#
+  - all-posts
+  - web-game
+  - lootlocker
 ---
+<iframe frameborder="0" align="center" src="https://itch.io/embed/2279599?bg_color=000000&amp;fg_color=ffffff&amp;link_color=59806b&amp;border_color=59806b" width="99%" height="167"><a href="https://kbippy.itch.io/meowdy">Meowdy by Kbippy Games, lesserkn0wn, Kai, Will Gooch</a></iframe>
 
-Playable **[here](https://kbippy.itch.io/meowdy)**.
+My first game jam - ScoreSpace Game Jam #27. The theme was Cats & Guns. Completed with Michael Anderson/LesserKn0wn (Art & Music) and William Gooch (Programming). 
 
-My first game jam. Completed with Michael Anderson (Art) and William Gooch (Programming). It's a short arcade style shoot-em-up game with abilities and powerups. The original version was created in two days and can be downloaded from the itch page, or the updated version can be played in browser. After the jam, I added a small shop between waves and some improvements to the physics.
+It's a short arcade style shoot-em-up game with abilities, powerups, and a leaderboard using lootlocker. The original version was created in two days and can be downloaded from the itch page, or the updated version can be played in browser. After the jam, I added a small shop between waves and some improvements to the physics.
 
 This was a great first experience of doing game jams and game development outside of the video games module at University. I'm excited to do more in the future and start my game development journey.
+
+<h2>Screenshots and Music</h2>
+![Gameplay Screenshot](/assets/images/2023-09-24/game.png)
+![Shop Screenshot](/assets/images/2023-09-24/shop.png)
+<center>
+The music Mike made (which is awesome):
+  <audio controls>
+    <source src="/assets/images/2023-09-24/main_menu.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</center>
