--- a/_posts/2025-05-21-Mossaic.md
+++ b/_posts/2025-05-21-Mossaic.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 'Mossaic: Tile-based Ecosystem Building'
-image: assets\images\2025-05-21\mossaic_picture.png
+image: /assets/images/2025-05-21/mossaic_picture.png
 tags:
   - game-dev
   - game-jam
